<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentHome">

    <!-- Fragment Home -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Home Option-->
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/judul_home"
            android:textSize="40sp"
            android:textStyle="bold" />

        <!--Profile Option-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/opProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/op_two"
            android:contentDescription="@string/judul_home"
            android:src="@drawable/ic_profile"
            tools:ignore="RelativeOverlap" />

        <!--Greeting-->
        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opProfile"
            android:layout_centerHorizontal="true"
            android:layout_toStartOf="@+id/yourName"
            android:padding="10dp"
            android:text="@string/greeting"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--Your Name-->
        <TextView
            android:id="@+id/yourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/opProfile"
            android:layout_centerHorizontal="true"
            android:hint="@string/field_user"
            android:padding="10dp"
            android:textSize="24sp" />

        <!--Tahun Lahir Field-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inTahun"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_below="@id/yourName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/field_tahun"
            android:inputType="number" />

        <!--Hitung Button-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHitung"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/inTahun"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/op_one"
            android:text="@string/btn_four"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            app:elevation="5dp" />

    </RelativeLayout>

</FrameLayout>