<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentUmur">

    <!-- Fragment Home -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <!--Greeting-->
        <TextView
            android:id="@+id/greeting2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_toStartOf="@+id/yourName3"
            android:padding="10dp"
            android:text="@string/greeting"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <!--Your Name-->
        <TextView
            android:id="@+id/yourName3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:hint="@string/field_user"
            android:padding="10dp"
            android:textSize="24sp" />

        <!--Your Name-->
        <TextView
            android:id="@+id/umurKamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/yourName3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/info_iumur"
            android:padding="10dp"
            android:textSize="24sp" />

        <!--Your Age-->
        <TextView
            android:id="@+id/hasilUmur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/umurKamu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textSize="24sp" />

    </RelativeLayout>

</FrameLayout>