<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/op_three"
    tools:context=".FragmentLogin">

    <!-- Fragment Login -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <!--Header & Logo-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Logo-->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="300dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_onepiece" />

            <!--Header-->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_one"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <!--Username Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/field_user"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/field_pass"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <!--Register Option-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/opRegister"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:text="@string/option_regis"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <!--Forgotten Password Option-->
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/opForget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@string/option_forgot"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <!--Login Button-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="40dp"
                    android:backgroundTint="@color/op_one"
                    android:text="@string/btn_one"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:elevation="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <!--Chat Option-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/opChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/op_two"
            android:contentDescription="@string/desc_one"
            android:src="@drawable/ic_chat" />

        <!--Ask Option-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/opAsk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/op_two"
            android:contentDescription="@string/desc_two"
            android:src="@drawable/ic_faq"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</FrameLayout>