<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentRegister">

    <!-- Fragment Login -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <!--Header & Logo-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <!--Header-->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_three"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:orientation="vertical">

                <!--Username Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inUsername2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/field_user"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/field_name"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Password Field-->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:boxCornerRadiusBottomEnd="20dp"
                    app:boxCornerRadiusBottomStart="20dp"
                    app:boxCornerRadiusTopEnd="20dp"
                    app:boxCornerRadiusTopStart="20dp"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:hint="@string/field_pass"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textColorHint="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Register Button-->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRegister"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="40dp"
                    android:backgroundTint="@color/op_one"
                    android:text="@string/btn_three"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp"
                    app:elevation="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</FrameLayout>